# Pill-Dispenser

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.defaults
data/: index.html  script.js  style.css
include/: button.h  flash.h  led.h  ntp.h  schedule.h  server.h  server_auth_digest.h  servo.h  wifi.h
include/wifi_connection/: esptouch.h  wps.h
src/: CMakeLists.txt  button.c  flash.c  led.c  main.c  ntp.c  schedule.c  server.c  server_auth_digest.c  servo.c  wifi.c
src/wifi_connection/: esptouch.c  wps.c
